# travel-ai-world

./: README.md  tasks.ps1
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
backend/alembic/: alembic.md  env.py
backend/alembic/versions/: 1356a9a19d09_add_trip_destination_itinerary_day_.py  48dd32e2a1c4_initial_migration.py  a1b2c3d4e5f6_add_google_oauth_fields_to_users.py  b2c3d4e5f6a7_drop_hashed_password_google_only_auth.py  c20ea422a072_change_travel_style_and_amenities_from_.py  e5f41161a19b_revert_json_back_to_array.py  fcb8320e89ee_add_role_to_user_table.py
backend/app/: app.md  main.py
backend/app/api/: deps.py
backend/app/core/: config.py  constants.py  exceptions.py  security.py
backend/app/db/: session.py
backend/app/models/: __init__.py  accommodation.py  activity.py  base.py  destination.py  itinerary_day.py  meal.py  model.md  transportation.py  trip.py  user.py
backend/app/repositories/: __init__.py  accommodation_repository.py  activity_repository.py  destination_repository.py  itinerary_day_repository.py  meal_repository.py  transportation_repository.py  trip_repository.py  user_repository.py
backend/app/schemas/: __init__.py  accommodation.py  activity.py  chat.py  destination.py  itinerary_day.py  meal.py  transportation.py  trip.py  user.py
backend/app/services/: __init__.py  accommodation_service.py  activity_service.py  chat_service.py  destination_service.py  meal_service.py  (+4 more)
backend/scripts/: create_structure.py
backend/tests/: conftest.py  test.md
(+144 files in other folders)
