[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fastapi-enterprise"
version = "1.0.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.110.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "sqlalchemy>=2.0.28",
    "asyncpg>=0.29.0",
    "asyncmy>=0.2.9; python_version < '3.14'",
    "aiosqlite>=0.20.0",
    "alembic>=1.13.1",
    "bcrypt>=4.0.1",
    "PyJWT>=2.8.0",
    "email-validator>=2.1.0.post1",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.1.1", "pytest-asyncio>=0.23.5", "ruff>=0.3.3", "httpx>=0.27.0", "mypy>=1.9.0", "pytest-cov>=4.1.0"] 
test = ["pytest>=8.1.1", "pytest-asyncio>=0.23.5", "pytest-cov>=4.1.0", "httpx>=0.27.0", "mypy>=1.9.0"]
[tool.ruff]
line-length = 88
target-version = "py312"
exclude = [".git", "__pycache__", "alembic", "venv"]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
